fix BoxedPrimitiveConstructor issues for better perf